--- a/src/sk_robot_lib/CMakeLists.txt
+++ b/src/sk_robot_lib/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
@@ -39,6 +40,7 @@ set(dependencies
   rclcpp
   std_msgs
   tf2
+  tf2_ros
   geometry_msgs
   sensor_msgs
   nav_msgs
