--- a/src/sk_robot_lib/package.xml
+++ b/src/sk_robot_lib/package.xml
@@ -16,6 +16,7 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>tf2</depend>
+  <depend>tf2_ros</depend>
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
