--- a/src/joy2cmd/param/rplidar.param.yaml
+++ b/src/joy2cmd/param/rplidar.param.yaml
@@ -1,7 +1,7 @@
 /**:
   ros__parameters:
     channel_type: "serial"
-    serial_port: "/dev/ttyUSB0"
+    serial_port: "/dev/rplidar"
     serial_baudrate: 256000
     frame_id: "map"
     inverted: false
