--- a/src/bev_cuda/param/bev.param.yaml
+++ b/src/bev_cuda/param/bev.param.yaml
@@ -1,10 +1,10 @@
 /**:
   ros__parameters:
     res: 0.05
-    width: 80
-    height: 80
+    width: 50 #60
+    height: 60 #60
     origin_x: 0.0
-    origin_y: -2.0 #- (self.height * self.res) / 2.0
+    origin_y: -1.5 #- (self.height * self.res) / 2.0
     dx: -0.34
     dy: 0.0
     closing_kernel_size: 1
