--- a/src/gps_nav/gps_nav/.env
+++ b/src/gps_nav/gps_nav/.env
@@ -4,6 +4,8 @@ mountpoint = 'VRS-RTCM32'
 user = 'dori0126'#'mdstan2023'
 password = 'ngii' 
 PATH_LOG_FILE=/home/nvidia/gps/path_1.txt
+GPS_LOG_PATH=/home/nvidia/ros2_ws/gps_nav/gps_nav/log
+
 #SELECTED_PATH=paths/path_hubcenter_2.txt 
 # SELECTED_PATH=paths/L8Ent-go2-2m_new.txt ## 유택근박사님 path.
 # SELECTED_PATH=paths/new_path.txt ## 유택근 박사님코드 1m짜리 반전시켜서 사용
