--- a/src/gps_nav/gps_nav/.env
+++ b/src/gps_nav/gps_nav/.env
@@ -1,7 +1,7 @@
 caster = 'rts2.ngii.go.kr'
 port = 2101
 mountpoint = 'VRS-RTCM32'
-user = 'dori0126'#'mdstan2023'
+user = 'mdstan2023' #'dori0126'#'mdstan2023'
 password = 'ngii' 
 PATH_LOG_FILE=/home/nvidia/gps/path_1.txt
 GPS_LOG_PATH=/home/nvidia/ros2_ws/gps_nav/gps_nav/log
